kubernetes/standard/multinode/patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowmanager
  namespace: flowmanager-multinode
spec:
  replicas: 3
  template:
    spec:
      $setElementOrder/containers:
        - name: flowmanager
      containers:
        - image: [FLOWMANAGER_IMAGE_URL:FLOWMANAGER_VERSION]
          name: flowmanager
