kubernetes/standard/multinode/ingress.yml
## Replace <HOST> with Flow Manager host

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowmanager
  labels:
    app: flowmanager
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/secure-upstream: "true"
spec:
  tls:
    - hosts:
        - <HOST>
      secretName: tls
  rules:    
    - host: <HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flowmanager
                port:
                  number: 8081
